@@ -25,6 +25,7 @@ import java.util.Map;
 import org.apache.hadoop.conf.Configuration;
 import org.apache.hadoop.mapred.JobConf;
 import org.apache.hadoop.mapreduce.MRJobConfig;
+import org.apache.hadoop.util.Shell;
 import org.apache.hadoop.yarn.api.ApplicationConstants.Environment;
 import org.apache.hadoop.yarn.api.records.Resource;
 import org.apache.tez.dag.api.TezConstants;
@@ -113,7 +114,11 @@ public class TestMRHelpers {
     conf.set(MRJobConfig.REDUCE_ENV, "foo=red1,bar=red2");
     conf.set(MRJobConfig.MAP_LOG_LEVEL, "TRACE");
     conf.set(MRJobConfig.REDUCE_LOG_LEVEL, "FATAL");
-    conf.set(MRJobConfig.MAPRED_ADMIN_USER_ENV, "LD_LIBRARY_PATH=$TEZ_ADMIN_ENV_TEST/lib/native");
+    final String mapredAdminUserEnv = Shell.WINDOWS ?
+        "PATH=%PATH%" + File.pathSeparator + "%TEZ_ADMIN_ENV%\\bin":
+        "LD_LIBRARY_PATH=$TEZ_ADMIN_ENV_TEST/lib/native";
+
+    conf.set(MRJobConfig.MAPRED_ADMIN_USER_ENV, mapredAdminUserEnv);
     return conf;
   }
 
@@ -123,8 +128,17 @@ public class TestMRHelpers {
     Assert.assertTrue(env.containsKey(Environment.LD_LIBRARY_PATH.name()));
     Assert.assertTrue(env.containsKey(Environment.SHELL.name()));
     Assert.assertTrue(env.containsKey("HADOOP_ROOT_LOGGER"));
-    Assert.assertEquals("$PWD:$TEZ_ADMIN_ENV_TEST/lib/native",
-        env.get(Environment.LD_LIBRARY_PATH.name()));
+
+    /* On non-windows platform ensure that LD_LIBRARY_PATH is being set and PWD is present.
+     * on windows platform LD_LIBRARY_PATH is not applicable. check the PATH is being appended
+     * by the user setting (ex user may set HADOOP_HOME\\bin.
+     */
+    if (!Shell.WINDOWS) {
+      Assert.assertEquals("$PWD:$TEZ_ADMIN_ENV_TEST/lib/native",
+          env.get(Environment.LD_LIBRARY_PATH.name()));
+    } else {
+      Assert.assertTrue(env.get(Environment.PATH.name()).contains(";%TEZ_ADMIN_ENV%\\bin"));
+    }
 
 //    TEZ-273 will reinstate this or similar. 
 //    for (String val : YarnConfiguration.DEFAULT_YARN_APPLICATION_CLASSPATH) {
